--- a/config/translations/pt.json
+++ b/config/translations/pt.json
@@ -1,8 +1,8 @@
 {
   "home": "Início",
 
-  "hello": "Site multilíngue em Gatsby",
-  "subline": "Internacionalização / i18n sem plugins ou pacotes de terceiros para Posts e Páginas. URLs diferentes dependendo do idioma. Foco em SEO, PWA, Otimização de imagens, Styled Components e muito mais. Esse starter também é integrado ao Netlify CMS para gerenciar todas as páginas, posts e imagens.",
+  "hello": "Stoneworks - tecnologia, carreira, vida, pessoas.",
+  "subline": "Olá, bem vindo ao meu blog pessoal-sobre-vida-profissional! Sou Felipe Bandeira e estarei postando dicas, truques, problemas (com sorte as suas soluções também) e dificuldades que encontro na carreira de desenvolvedor.",
   "latestPosts": "Útimos posts",
   "category": "Categoria",
   "allPosts": "Todos os Posts",  
@@ -14,8 +14,8 @@
 
   "button": "Botão",
 
-  "aboutProject": "Iceberg Gatsby é um PWA, salve o site em sua homescreen para vê-lo offline.",
-  "seeMorePWA": "Leia mais sobre PWA aqui",
-  "maintainedBy": "Projeto mantido por",
-  "contributeMessage": "Você sempre poderá contribuir com esse projeto no"
+  "aboutProject": "Esse blog é um PWA, o que significa que você pode salvar ele para ler offline.",
+  "seeMorePWA": "Conheça mais sobre PWA aqui",
+  "maintainedBy": "Mantido por",
+  "contributeMessage": ""
 }
