--- a/config/translations/en.json
+++ b/config/translations/en.json
@@ -1,8 +1,8 @@
 { 
   "home": "Home",
 
-  "hello": "Gatsby multi-language starter",
-  "subline": "Internationalization / i18n without third party plugins or packages for Posts and Pages. Different URLs dependending on the language. Focused on SEO, PWA, Image Optimization, Styled Components and more. This starter is also integrate with Netlify CMS to manage all pages, posts and images.",
+  "hello": "Stoneworks - tech, career, life, people.",
+  "subline": "Hello, welcome to my personal-about-professional blog! My name is Felipe Bandeira, I'm posting tips, tricks, problems (hopefully their solutions too) and strugles I encounter in the developer career.",
   "latestPosts": "Latest posts",
   "category": "Category", 
   "allPosts": "All Posts",
@@ -14,8 +14,8 @@
 
   "button": "Button",
 
-  "aboutProject": "Iceberg Gatsby is a PWA, save it for offline reading.",
-  "seeMorePWA": "See more PWA here",
+  "aboutProject": "This blog is a PWA, that means you can save it for offline reading.",
+  "seeMorePWA": "You can learn more about PWA here",
   "maintainedBy": "Maintained by",
-  "contributeMessage": "You can always contribute with the project on"
+  "contributeMessage": ""
 }
