--- a/config/translations/pt.json
+++ b/config/translations/pt.json
@@ -1,8 +1,8 @@
 {
   "home": "Início",
 
-  "hello": "Stoneworks - tecnologia, carreira, vida, pessoas.",
-  "subline": "Olá, bem vindo ao meu blog pessoal-sobre-vida-profissional! Sou Felipe Bandeira e estarei postando dicas, truques, problemas (com sorte as suas soluções também) e dificuldades que encontro na carreira de desenvolvedor.",
+  "hello": "Olá, bem vindo ao Stoneworks",
+  "subline": "Sou Felipe Bandeira, esse é meu blog pessoal-sobre-vida-profissional, onde estarei postando sobre carreira, estilo de vida, projetos e outros tópicos relacionados a tecnologia. Tenho consciência de que posso acabar postando algo incorreto, ou que vá na contramão das crenças de algumas pessoas. Com isso em mente, quero deixar claro que estou aberto para discossões bem educadas, portando, se quiser, entre em contato e vamos discutir e aprender juntos. :)",
   "latestPosts": "Útimos posts",
   "category": "Categoria",
   "allPosts": "Todos os Posts",  
